[gd_scene load_steps=7 format=3 uid="uid://b57c4v1sif4nj"]

[ext_resource type="Script" uid="uid://yktfnw0gpl1b" path="res://scripts/game_over_scene.gd" id="1_jy0sy"]
[ext_resource type="Texture2D" uid="uid://bi8jql20c688q" path="res://sprites1/start_screen/start button/when click.png" id="1_weh2h"]
[ext_resource type="Texture2D" uid="uid://c7bc0pxbkqpn7" path="res://sprites1/start_screen/start button/idle.png" id="2_jy0sy"]
[ext_resource type="Texture2D" uid="uid://luydshw2aopu" path="res://sprites1/start_screen/quit menu button/when click.PNG" id="3_5jg82"]
[ext_resource type="FontFile" uid="uid://gxkseqf68xa5" path="res://font/Ot6-Regular.ttf" id="4_5jg82"]
[ext_resource type="Texture2D" uid="uid://bnddk27itqvoy" path="res://sprites1/start_screen/quit menu button/idle.PNG" id="4_lt2b8"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_jy0sy")

[node name="white" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.103743516, 0.10374353, 0.103743516, 0.7882353)

[node name="NewGameClicked" type="TextureRect" parent="."]
offset_left = 554.0
offset_top = 501.0001
offset_right = 1554.0
offset_bottom = 818.0001
scale = Vector2(0.24, 0.24)
texture = ExtResource("1_weh2h")

[node name="NewGame" type="Button" parent="."]
process_mode = 3
offset_left = 553.0
offset_top = 500.0
offset_right = 1561.0
offset_bottom = 825.0
scale = Vector2(0.24, 0.24)
icon = ExtResource("2_jy0sy")
flat = true

[node name="Label" type="Label" parent="."]
offset_left = 446.0
offset_top = 332.0
offset_right = 659.0
offset_bottom = 401.0
scale = Vector2(2.2, 2.2)
theme_override_fonts/font = ExtResource("4_5jg82")
theme_override_font_sizes/font_size = 50
text = "Game Over"
uppercase = true

[node name="QuitClicked" type="TextureRect" parent="."]
offset_left = 11.999999
offset_top = 666.00006
offset_right = 1012.0
offset_bottom = 1666.0
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_5jg82")

[node name="Quit" type="Button" parent="."]
process_mode = 3
offset_left = 12.0
offset_top = 666.0
offset_right = 1020.0
offset_bottom = 1674.0
scale = Vector2(0.05, 0.05)
icon = ExtResource("4_lt2b8")
flat = true

[connection signal="pressed" from="NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
